fixing suitepicon vertical alignment issue with email opt in

--- a/themes/SuiteP/css/suitep-base/detailview.scss
+++ b/themes/SuiteP/css/suitep-base/detailview.scss
@@ -436,3 +436,7 @@ p.msg {
     @extend  .email-opt-in-confirmed;
   }
 }
+
+.email-opt-in .suitepicon {
+  line-height: inherit;
+}
